--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,8 @@ dist
 dist-ssr
 *.local
 # # Environment Variables
-# .env
-# .env.local
-# .env.development
-# .env.production
-# .env.test
-# Editor directories and files
+.env
+
 .vscode/*
 !.vscode/extensions.json
 .idea
